去除了 kvbench.py 中的 cpuinfo, psutil, distro 等依赖

--- a/report_template.tex
+++ b/report_template.tex
@@ -71,7 +71,7 @@
 \item[CPU Model:] \VAR{environ.cpu_model}
 \item[RAM:] \VAR{environ.ram_size}
 \item[Disk Model:] \VAR{environ.disk_model}
-\item[OS:] \VAR{environ.os_type}
+\item[OS:] \VAR{environ.os_name}
 \item[Kernel:] \VAR{environ.kernel}
 \end{description}
 
