修改了测试程序配置的缩进以及结果表（竖）的浮动体位置

--- a/report_template.tex
+++ b/report_template.tex
@@ -95,10 +95,10 @@
 
 \subsection{测试程序配置}
 
-\begin{itemize}
+\begin{itemize}[itemindent=2em]
 %- for bench in benchs
   \item \textcolor{red}{\textbf{\VAR{bench.name}}}
-  \begin{description}[itemindent=4em]
+  \begin{description}[itemindent=2.5em]
     %- if bench.class
     \item[class:] \VAR{bench.class}
     %- endif
@@ -128,7 +128,7 @@
 \section{测试结果概览}
 
 \vfill
-\begin{table}[htp]
+\begin{table}[!hp]
 \centering
 \begin{tabular}{ccrrrr}
   \toprule
